--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,74 @@ html,
 body {
   height: 100%;
 }
+/*my codes start here*/
+/*font style from google fonts*/
+@font-face {
+  font-family: 'Merriweather';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Merriweather Regular'), local('Merriweather-Regular'), url(https://fonts.gstatic.com/s/merriweather/v21/u-440qyriQwlOrhSvowK_l5-fCZJ.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Raleway'), local('Raleway-Regular'), url(https://fonts.gstatic.com/s/raleway/v14/1Ptug8zYS_SKggPNyC0ISg.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'ZCOOL QingKe HuangYou';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('ZCOOL QingKe HuangYou Regular'), local('ZCOOLQingKeHuangYou-Regular'), url(https://fonts.gstatic.com/s/zcoolqingkehuangyou/v5/2Eb5L_R5IXJEWhD3AOhSvFC554MOOahI4mR4jPe4.ttf) format('truetype');
+}
+/*margin for the whole page*/
+body {
+  font-size: 62.5%;
+  margin: 1rem;
+  font-family: 'Raleway', sans-serif;
+  border: 1px solid black;
+  letter-spacing: 1px;
+  line-height: 1.6;
+}
+h1,
+h2,
+h3,
+h4 {
+  font-family: 'Oswald', sans-serif;
+}
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding: 2rem 0;
+}
+header .my-resume {
+  font-family: 'ZCOOL QingKe HuangYou', cursive;
+  width: 20%;
+  font-size: 2rem;
+  align-items: center;
+}
+header .links {
+  width: 70%;
+  font-size: 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding-top: 1rem;
+}
+header .links a {
+  font-family: 'Merriweather', serif;
+  text-decoration: none;
+  font-weight: bold;
+}
+header .links a:hover {
+  color: #b65311;
+  transition: 0.3s;
+}
+.self .image {
+  width: 40%;
+  transform: rotate(90deg);
+}
