the desktop version done

--- a/less/index.less
+++ b/less/index.less
@@ -188,6 +188,28 @@ header{
 	}//close for ul
 }//close project
 
+//styling for contact
+.contact{
+	h2{
+		.title-format();
+	}//close for h2
+	p{
+		font-size: @small-font-size;
+		margin: 1rem;
+	}//close p
+
+}//close for contact
+
+//styling for footer
+footer{
+	p{
+		text-align: center;
+		font-size: @small-font-size;
+	}
+}
+
+
+
 
 
 
