--- a/css/index.css
+++ b/css/index.css
@@ -251,3 +251,18 @@ header .links a:hover {
 .projects ul li {
   font-size: 1rem;
 }
+.contact h2 {
+  font-size: 1.2rem;
+  margin: 1rem;
+  text-align: center;
+  width: auto;
+  background-color: rgba(158, 214, 94, 0.87);
+}
+.contact p {
+  font-size: 1rem;
+  margin: 1rem;
+}
+footer p {
+  text-align: center;
+  font-size: 1rem;
+}
