--- a/less/index.less
+++ b/less/index.less
@@ -101,13 +101,23 @@ h1, h2, h3, h4{
 }
 // styling the header
 header{
-	.display-row-format();
-	padding: 2rem 0;
+	
 	.my-resume{
 		font-family: 'ZCOOL QingKe HuangYou', cursive;
-		width: 20%;
+		// width: 20%;
 		font-size: 2rem;
 		align-items: center;
+
+		//styling for responsive version
+		@media (max-width: 500px){
+			h1{
+				font-size: 2rem;
+				text-align: center;
+				width: 100%;
+				
+			}//close for h1
+			
+		}//close for @media
 	}//close the .my-resume
 
 	.links{
@@ -116,6 +126,14 @@ header{
 		.display-row-format();
 		
 		padding-top:1rem;
+
+		//for responsive
+		@media (max-width: 500px){
+			.display-column-format();
+			width: 100%;
+			align-items: center;
+
+		}//close for @media
 		a{
 			font-family: 'Merriweather', serif;
 			text-decoration: none;
@@ -133,17 +151,31 @@ header{
 			
 		}//close a
 
+		
 	}//close the .links
 
 }//close the header
 
 // styling for the "self" section
 .self{
+
+	@media (max-width: 500px){
+		text-align: center;
+	}
 	
+
 	.image{
-		width:40%;
-		margin:2rem;
+		width: 300px;
+		padding:2.5rem;
 		transform: rotate(90deg);
+
+		//for responsive
+		@media (max-width: 500px){
+			align-content: center;
+			width: 300px;
+			
+		}//close for @media
+
 	}//close for image
 
 	.about-me{
